[gd_scene load_steps=17 format=3 uid="uid://ba833q1t0yowx"]

[ext_resource type="Script" uid="uid://cg5dl7gwb4ai4" path="res://scripts/GameBoard.gd" id="1_31iy7"]
[ext_resource type="Script" uid="uid://y0i1bu2qc4wo" path="res://scripts/CharacterDatabase.gd" id="1_77p1f"]
[ext_resource type="Script" uid="uid://c05jqm0sggv5r" path="res://scripts/UnitSpawner.gd" id="2_ac6wt"]
[ext_resource type="Shader" uid="uid://brk8s24km212r" path="res://assets/shaders/water.gdshader" id="3_ac6wt"]
[ext_resource type="PackedScene" uid="uid://crm6y18r5xin6" path="res://scenes/ui/PlayerUI.tscn" id="4_77p1f"]
[ext_resource type="PackedScene" uid="uid://bdaw3p0vjnv8v" path="res://scenes/ui/ShopUI.tscn" id="5_qfvow"]
[ext_resource type="Script" uid="uid://cmvblyrj6dyho" path="res://scripts/Player.gd" id="6_qfvow"]
[ext_resource type="Script" uid="uid://b5muy8x5q7pb7" path="res://scripts/TestHealthBar.gd" id="8_r5hcy"]
[ext_resource type="Script" uid="uid://bob8qwdqdo0f8" path="res://scripts/EnemyUnitGenerator.gd" id="9_f0wtn"]
[ext_resource type="Script" uid="uid://cvm3ytv3ge27o" path="res://scripts/BattleManager.gd" id="10_28ang"]
[ext_resource type="Script" uid="uid://cbhvhpw10bidi" path="res://scripts/CombatSystem.gd" id="11_r57k3"]
[ext_resource type="Script" uid="uid://b6677hbabbnxj" path="res://scripts/CombatDebugUI.gd" id="12_aqgfv"]

[sub_resource type="PlaneMesh" id="PlaneMesh_8hsy1"]
size = Vector2(28, 20)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_prs8h"]
points = PackedVector3Array(-14, 0, -10, -14, 0, 10, 14, 0, -10, 14, 0, 10)

[sub_resource type="BoxMesh" id="BoxMesh_33v6w"]
size = Vector3(200, 0.2, 200)
subdivide_width = 1
subdivide_height = 1
subdivide_depth = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6m12s"]
render_priority = 0
shader = ExtResource("3_ac6wt")
shader_parameter/WATER_COL = Color(0.04, 0.38, 0.88, 1)
shader_parameter/WATER2_COL = Color(0.04, 0.35, 0.78, 1)
shader_parameter/FOAM_COL = Color(0.8125, 0.9609, 0.9648, 1)
shader_parameter/distortion_speed = 3.0
shader_parameter/tile = Vector2(100, 100)
shader_parameter/height = 2.0
shader_parameter/wave_size = Vector2(1, 1)
shader_parameter/wave_speed = 1.0

[node name="GameBoard" type="Node3D"]
script = ExtResource("1_31iy7")

[node name="PlayerArena" type="Node3D" parent="."]

[node name="MiddleZone" type="Node3D" parent="."]

[node name="EnemyArena" type="Node3D" parent="."]

[node name="Bench" type="Node3D" parent="."]

[node name="Player" type="Node" parent="."]
script = ExtResource("6_qfvow")

[node name="CharacterDatabase" type="Node" parent="."]
script = ExtResource("1_77p1f")

[node name="UnitSpawner" type="Node" parent="."]
script = ExtResource("2_ac6wt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource("4_77p1f")]

[node name="ShopUI" parent="CanvasLayer" instance=ExtResource("5_qfvow")]

[node name="BoardSurface" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, -0.15, 6)
mesh = SubResource("PlaneMesh_8hsy1")

[node name="StaticBody3D" type="StaticBody3D" parent="BoardSurface"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BoardSurface/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_prs8h")

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.61261, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.969284, 0, 0, 0, 0.727121, 0, 0, 0, 0.969284, 12.5134, -2, 0)
mesh = SubResource("BoxMesh_33v6w")
surface_material_override/0 = SubResource("ShaderMaterial_6m12s")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.781444, 0.623975, 0, -0.623975, 0.781444, 10.7099, 4.86361, 20.7054)
light_energy = 1.762

[node name="MessageLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="CentralMessageLabel" type="Label" parent="MessageLayer"]
visible = false
offset_left = 424.0
offset_top = 285.0
offset_right = 724.0
offset_bottom = 345.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Not enough gold!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthTester" type="Node" parent="."]
script = ExtResource("8_r5hcy")

[node name="EnemyUnitGenerator" type="Node" parent="."]
script = ExtResource("9_f0wtn")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("10_28ang")

[node name="CombatSystem" type="Node" parent="."]
script = ExtResource("11_r57k3")

[node name="DebugUI" type="CanvasLayer" parent="."]
layer = 15

[node name="CombatDebugUI" type="Control" parent="DebugUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_aqgfv")
